--- a/index.html
+++ b/index.html
@@ -39,31 +39,35 @@
   <div id="vertical">
      <div class="turf-box" onclick="showForm()">
         <img src="turf.png">
-        <h3>Name: Nutmug</h3>
-        <h3>Place: Madathil</h3>
-        <h3>Time: 24/7</h3>
-        <h3>Rate: $800</h3>
+        <div class="deta">
+        <h3>Nutmug</h3>
+        <h5>Madathil,iritty,kannur</h5>
+        <h5>$800</h5>
+        </div>
       </div>
       <div class="turf-box" onclick="showForm()">
         <img src="turf2.jpg">
-        <h3>Name: Highburry</h3>
-        <h3>Place: Vallithode</h3>
-        <h3>Time: 6AM to 12PM</h3>
-        <h3>Rate: $1200</h3>
+         <div class="deta">
+        <h3>highburry</h3>
+        <h5>vallithode,iritty,kannur</h5>
+        <h5>$1200</h5>
+        </div>
       </div>
       <div class="turf-box" onclick="showForm()">
         <img src="turf3.webp">
-        <h3>Name: Arena</h3>
-        <h3>Place: Punnad</h3>
-        <h3>Time: 6AM to 12PM</h3>
-        <h3>Rate: $1200</h3>
+        <div class="deta">
+        <h3>arena</h3>
+        <h5>aralam,iritty,kannur</h5>
+        <h5>$800</h5>
+        </div>
       </div>
       <div class="turf-box" onclick="showForm()">
         <img src="turf4.jpg">
-        <h3>Name: Zeal</h3>
-        <h3>Place: Uliyil</h3>
-        <h3>Time: 7AM to 11PM</h3>
-        <h3>Rate: $800</h3>
+        <div class="deta">
+        <h3>falcons</h3>
+        <h5>punnad,iritty,kannur</h5>
+        <h5>$1200</h5>
+        </div>
       </div>
   </div>
   <div id="footer">
