--- a/index.html
+++ b/index.html
@@ -40,33 +40,33 @@
      <div class="turf-box" onclick="showForm()">
         <img src="turf.png">
         <div class="deta">
-        <h3>Nutmug</h3>
-        <h5>Madathil,iritty,kannur</h5>
-        <h5>$800</h5>
+        <div class="mar"><h3>Nutmug</h3></div>
+        <div class="mar"><h5>Madathil,iritty,kannur</h5></div>
+        <div class="mar"><h5>$800</h5></div>
         </div>
       </div>
       <div class="turf-box" onclick="showForm()">
         <img src="turf2.jpg">
          <div class="deta">
-        <h3>highburry</h3>
-        <h5>vallithode,iritty,kannur</h5>
-        <h5>$1200</h5>
+        <div class="mar"><h3>highburry</h3></div>
+        <div class="mar"><h5>vallithode,iritty,kannur</h5></div>
+        <div class="mar"><h5>$1200</h5></div>
         </div>
       </div>
       <div class="turf-box" onclick="showForm()">
         <img src="turf3.webp">
         <div class="deta">
-        <h3>arena</h3>
-        <h5>aralam,iritty,kannur</h5>
-        <h5>$800</h5>
+        <div class="mar"><h3>arena</h3></div>
+        <div class="mar"><h5>aralam,iritty,kannur</h5></div>
+        <div class="mar"><h5>$800</h5></div>
         </div>
       </div>
       <div class="turf-box" onclick="showForm()">
         <img src="turf4.jpg">
         <div class="deta">
-        <h3>falcons</h3>
-        <h5>punnad,iritty,kannur</h5>
-        <h5>$1200</h5>
+        <div class="mar"><h3>falcons</h3></div>
+        <div class="mar"><h5>punnad,iritty,kannur</h5></div>
+        <div class="mar"><h5>$1200</h5></div>
         </div>
       </div>
   </div>
