--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div class="input-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+        <input type="password" id="password" name="password" minlength="8"  placeholder="Enter your password" required>
       </div>
 
       <button type="button" class="btn" onclick="log()">Login</button>
@@ -41,3 +41,4 @@
 </script>
 </body>
 </html>
+
